Fix aspect ratio for rounded background image size

The previous calculation to maintain aspect size when one
background image dimension is round and the other is auto
was using the new tile size for the rounded dimension for the
aspect ratio calculation, which is wrong. This change switches
to using the original aspect ratio.

New tests for both horizontal and vertical cases.

R=fmalita@chromium.org
BUG=612278

Review-Url: https://codereview.chromium.org/2130523002
Cr-Commit-Position: refs/heads/master@{#404154}

Former-commit-id: 60855ad5ed67add982bf86c34cb14b44e7b85b75